describe more in flow classification

--- a/paper.bib
+++ b/paper.bib
@@ -734,3 +734,36 @@ year = "2012"
   title = {{VNF}-P: A model for efficient placement of virtualized network functions},
   booktitle = {10th International Conference on Network and Service Management ({CNSM}) and Workshop}
 }
+
+@inproceedings{Qazi2013,
+  doi = {10.1145/2486001.2491700},
+  url = {https://doi.org/10.1145%2F2486001.2491700},
+  year  = {2013},
+  publisher = {Association for Computing Machinery ({ACM})},
+  author = {Zafar Ayyub Qazi and Jeongkeun Lee and Tao Jin and Gowtham Bellala and Manfred Arndt and Guevara Noubir},
+  title = {Application-awareness in {SDN}},
+  booktitle = {Proceedings of the {ACM} {SIGCOMM} 2013 conference on {SIGCOMM} - {SIGCOMM} {\textquotesingle}13}
+}
+
+
+@inproceedings{Iwai2016,
+  doi = {10.1109/apnoms.2016.7737226},
+  url = {https://doi.org/10.1109%2Fapnoms.2016.7737226},
+  year  = {2016},
+  month = {oct},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  author = {Takamitsu Iwai and Akihiro Nakao},
+  title = {Adaptive mobile application identification through in-network machine learning},
+  booktitle = {2016 18th Asia-Pacific Network Operations and Management Symposium ({APNOMS})}
+}
+
+
+@inproceedings{Plonka_flexibletraffic,
+
+    year = {2011},
+	month = {apr},
+	publisher = {Association for Computing Machinery ({ACM})}, 
+	author = {David Plonka and Paul Barford},
+	title = {Flexible Traffic and Host Profiling via DNS Rendezvous},
+	booktitle ={Workshop on Securing and Trusting Internet Names ({SATIN})}
+}
