--- a/netsoft_paper.tex
+++ b/netsoft_paper.tex
@@ -375,18 +375,37 @@ The architecture in the training phase is presented in Fig. \ref{fig:class_train
 
 
 
+\subsection{Definition of Ground Truth of Flow in Supervised ML}
+Ground truth of a flow can be defined based on server (owner of server, category of service, or name of application providing service in server), client (category or name of application in client, or name of executable file in client), or communication (transport layer protocol). Similar with\cite{Qazi2013} \cite{Iwai2016}, we defined ground truth of a flow based on the application establishing the flow in client for desktop applications and native mobile applications. As for web-based applications, we defined ground truth of a flow based on domain name of web service.
+
+
+
+\subsection{Method to Obtain Ground Truth of Flow in Supervised ML}
+We install our software on various devices establishing the flows. We call the software Scanner. Scanner has different versions for different operating systems (OSs). For desktop applications on Windows, trainer acts as scanner. It uses Windows API and local port of the flow to obtain the ground truth of the flow. As for Mac OS X, scanner calls the UNIX command “lsof” and parses the result to obtain lists of 5-tuples, process IDs (PIDs), and application names. Then scanner uses the PID and “ps” to obtain corresponding complete application names. As for native mobile applications on iOS, scanner uses a method similar to that used on OS X. However, we have to install package of UNIX command and jailbreak the iPhones before scanner runs.  As for native mobile applications on Android, scanner calls “cat /proc/net/tcp,” “cat /proc/net/tcp6,” and “cat /proc/net/udp,” and parses the results to obtain mappings of 5-tuples and UIDs. Next, the Android API and UIDs are used to obtain corresponding application names as ground truth. Finally, mappings of 5-tuples and application names are obtained. For iOS and Android, scanner has to run in background.
+
+As for web-based applications, we implemented a browser in Java. We let it run in Windows. It has two main modules. One browses websites to generate traffic. It browses only one website at a time. The other module obtains the PID of the browser module, shortens the domain name of the currently browsed website to act as the application name, and receives requests from Scanner. When scanner in Windows detects an active flow, it uses the Windows API to check what process established the flow. It obtains the process name and the PID of the process. When it encounters a process name that is “java.exe” or “javaw.exe,” it sends the PID to the browser. If the PID is the browser’s PID, the browser sends the application name to Scanner to act as the ground truth of that flow.
+
 \subsection{Flow Attributes Adopted in Supervised ML}
-In ML, when the system calculates flow attributes, we use only the transport layer information of packets with a payload. Moreover, we use the application round (APPR) proposed in \cite{classfication-cloud} to analyze the flow behavior. We use the number of packets, packet size, transmission time, transmission direction, throughput, and APPR to define flow attributes. A total of 69 attributes are defined, as reported in our previous study \cite{Chia-Chin-master}.
+In ML, when the system calculates flow attributes, we use only the transport layer information of packets with a payload. Moreover, we use the application round (APPR) proposed in \cite{classfication-cloud} to analyze the flow behavior. We use the number of packets, packet size, transmission time, transmission direction, throughput, and APPR to define flow attributes, such as total number of packets transmitted by the client, size of data transmitted by the server in Round N, and the average transmission time of each packet in Round N.A total of 69 attributes are defined, as reported in our previous study \cite{Chia-Chin-master}.
+
+
+
+\subsection{Procedure of Calculating Flow Attributes}
+When each packet comes in, the system creates or updates the information of the flow of the packet. The system stores the information of each flow simultaneously. When a flow meet the requirement to be summarized to produce statistical flow attributes, it takes less than 0.1 seconds to summarize that flow. The attributes of most flows, in our experience, require less than 10 seconds to calculate. After system calculates flow attributes, it takes less than 0.1 second to classify the answer.
 
 
 
 \subsection{Algorithms Adopted in Supervised ML}
-We used algorithms implemented by Weka, an open-source ML tool developed at the University of Waikato. We called the Weka Java API to build the classification model. In addition, we used three algorithms, RandomSupSpace with RandomTree \cite{TinKamHo1998}, FilterClassifier with discretization and RandomTree, and RandomCommittee with RandomTree.
+We use algorithms implemented by Weka, an open-source ML tool developed at the University of Waikato. We call the Weka Java API to build the classification model. We did model selection on all algorithms provided by Weka 3.8.0. To reduce effort, we generated two small data sets containing approximately 100 applications to act as a training data set and a classifying data set; this was done to avoid 10-fold cross validation on a testing data set. These data sets can be used for model selection, but they were not the data sets that were used to verify accuracy in the experiment of this study. Finally, considering accuracy, time to build classification model, memory usage to build and apply classification model, we use three algorithms, RandomSupSpace with RandomTree [35], FilterClassifier with discretization and RandomTree, and RandomCommittee with RandomTree. For a flow, we derive the classification result of each algorithm, and do majority voting to obtain final classification result.
+
+We studied the detail of these algorithms, and posited two reasons why these algorithms achieve high accuracy. One is that all of them are based on the random tree pattern, a type of decision tree that reduces overfitting by randomly selecting a subset of attributes, then selecting one attribute to split the node. The second reason is that two of them perform ensemble learning, a type of learning that is favorable for reducing overfitting to enhance accuracy.
 
 
 
 \subsection{Procedure of the Method Based on Inspecting of DNS Responses}
-In the training phase, we collect the mappings of the server IP address and application name. A mapping of the server IP address and application name indicates whether the application has ever established a connection with the server, the IP address of which is identified as the server IP address, and the server IP address has ever occurred in any DNS response captured. In the classification phase, we do not use server IP addresses with more than two corresponding applications among the mappings for classification. We use only those server IP addresses with one corresponding application in the mappings for classification. When the system detects a flow, we examine whether the source IP or destination IP address of the flow matches any of the server IP addresses. If it matches, we consider the corresponding application name as the classification result; otherwise, we use flow attributes of the flow and the classification model of supervised ML for classification.
+Similar with \cite{Plonka_flexibletraffic}, we do flow classification based on DNS responses. However, different from\cite{Plonka_flexibletraffic}, we link IP addresses in DNS responses to application names derived from OS of client, and use the IP addresses which have been linked to only one application to classify.
+
+More specifically, in the training phase, we collect the mappings of the server IP address and application name. A mapping of the server IP address and application name indicates whether the application has ever established a connection with the server, the IP address of which is identified as the server IP address, and the server IP address has ever occurred in any DNS response captured. In the classification phase, we do not use server IP addresses with more than two corresponding applications among the mappings for classification. We use only those server IP addresses with one corresponding application in the mappings for classification. When the system detects a flow, we examine whether the source IP or destination IP address of the flow matches any of the server IP addresses. If it matches, we consider the corresponding application name as the classification result; otherwise, we use flow attributes of the flow and the classification model of supervised ML for classification.
 
 
 
@@ -437,7 +456,7 @@ Although the system can perform online training and classification, we performed
 Mapping of Category Names: At each round of the tenfold cross validation, we applied name mapping to the training data set before we used it to build the classification model and we applied name mapping to the classification data set before we used it to calculate accuracy. The main reason for performing name mapping is that some applications have different ground truths in different operating systems. After name mapping, the testing data set contained 99 categories.
 
 \subsubsection{Accuracy Matrices and Results}
-Accuracy Matrices and Results: To evaluate the accuracy, we used precision, recall, and the F-measure (also called the F1 score), as shown in \ref{eqn_1}, \ref{eqn_2}, and \ref{eqn_3} \cite{muc4}. In each round of the tenfold cross validation, we calculated the precision and recall of each category to calculate the F1 score of each category. After ten rounds, we calculated the average F1 scores of each category in ten rounds. Table I presents the F1 scores in each category of the top 40 most popular applications in the testing data set. Next, we calculated the average F1 score of all categories in the ten rounds as 0.9062. The results (Table \ref{table:classification_result}) revealed that our system achieved high accuracy, enabling QoS for bandwidth control or distribution at the application level.
+Accuracy Matrices and Results: To evaluate the accuracy, we used precision, recall, and the F-measure (also called the F1 score), as shown in \ref{eqn_1}, \ref{eqn_2}, and \ref{eqn_3} \cite{muc4}. In each round of the tenfold cross validation, we calculated the precision and recall of each category to calculate the F1 score of each category. After ten rounds, we calculated the average F1 scores of each category in ten rounds. Table I presents the F1 scores in each category of the top 40 most popular applications in the testing data set. Next, we calculated the average F1 score of all categories in the ten rounds as 0.9062. The results (Table \ref{table:classification_result}) revealed that our system achieved high accuracy even there were up to 137 applications in testing data set. Some applications achieved higher F1 score; we believe this happened because these applications had sufficient training data, simple flow combinations, or rarely query servers that accepted requests from numerous applications. We will gather more data to prove our belief in the future. At least, it achieved high accuracy in overall, enabling QoS to effectively do bandwidth control or distribution at the application level in a local network of enterprise, where number of applications on which network manager wants to do bandwidth control may not be very large. In the future, we will add more applications to our testing data set.
 
 \begin{equation}
 \label{eqn_1}
@@ -483,6 +502,10 @@ Instagram           & 0.833465            & TED               & 0.829277        
 Tmall               & 0.799747            & YouTube           & 0.713084           \\ \hline
 \end{tabular}
 \end{table}
+
+\subsubsection{Performance Analysis}
+In each round of 10-fold cross validation, after the flow classification engine received a training data set that had approximately 14659 rules, it spent around 6 minutes building a classification model on a workstation with ordinary hardware, including an Intel® Core™ i5-5200U CPU @ 2.20 GHz with 16 GB of RAM. When we only used supervised ML without our proposed method based on DNS responses, ClassifierLight read the classifying data set and asked the flow classification engine for a classification result. The system had approximately 1418 rules, and required around 5 minutes to verify accuracy. No out of memory errors occurred for the flow classification engine both in building classification models and classifying flows. We think this absence of errors happened because we chose a favorable classification algorithm so that memory usage was frugal and time required to build a model was short, even though the hardware was ordinary; 14659 rules and 99 categories existed in the training data set after name mapping.
+
 
 \subsection{Evaluation of QoS When Host Bandwidth Is Limited}
 
