fix bibtex encoding

--- a/paper.bib
+++ b/paper.bib
@@ -742,7 +742,7 @@ year = "2012"
   publisher = {Association for Computing Machinery ({ACM})},
   author = {Zafar Ayyub Qazi and Jeongkeun Lee and Tao Jin and Gowtham Bellala and Manfred Arndt and Guevara Noubir},
   title = {Application-awareness in {SDN}},
-  booktitle = {Proceedings of the {ACM} {SIGCOMM} 2013 conference on {SIGCOMM} - {SIGCOMM} {\textquotesingle}13}
+  booktitle = {Proceedings of the {ACM} {SIGCOMM} 2013 conference on {SIGCOMM} - {SIGCOMM}'13}
 }
 
 
@@ -762,7 +762,7 @@ year = "2012"
 
     year = {2011},
 	month = {apr},
-	publisher = {Association for Computing Machinery ({ACM})}, 
+	publisher = {Association for Computing Machinery ({ACM})},
 	author = {David Plonka and Paul Barford},
 	title = {Flexible Traffic and Host Profiling via DNS Rendezvous},
 	booktitle ={Workshop on Securing and Trusting Internet Names ({SATIN})}
