--- a/netsoft_paper.tex
+++ b/netsoft_paper.tex
@@ -74,7 +74,7 @@ Therefore, the purpose of this paper can be summarized as follows:
 \begin{enumerate}
 \item To achieve extremely speed of packet exchanging of vCPE in small size network, this study proposed a mechanism to control OpenFlow tables which is in different hardware switches such as Lagopus\cite{lagopus-switch}, Pica8\cite{pica8-switch} and Edgecore\cite{edge-core-switch}. It supports single table and multi-table implementation in different switches and sends status and information message to Ryu controller. This mechanism brings out a novel implementation method of VNF that combine hardware and software operations. It not only makes hardware usage more efficiency but also stays maximum flexibility in NFV deployment.
 \item To cover most of NFV framework, this vCPE framework offer a multi cloud management feature. It can working with OpenDaylight\cite{opendaylight} on OpenStack\cite{openstack} and Ryu\cite{web:ryu} on Docker\cite{docker} perfectly. Users can deploy their NFV features in any kind of VM system even in public cloud, and monitor it in same system.
-\item To control flows with confidence, an application identification algorithm might be in consideration. The first thing comes out must be Intrusion Detection System (IDS) or Intrusion Prevention System (IPS) but there are 2 major weakness of this two kind of technic. The first is it spends a lot of time to identify connections, and network speed may hang on IPS. The other is it may can’t figure out encryption connections because not all of IDS or IPS have key matching feature. Most of modern cloud applications use HTTPS protocol as basic communication method which makes matter even worse. This study gives an algorithm to identify applications with statistical method with machine learning. The algorithm only use connection “attributes” to train an identification models such as packet direction, packet length. Afterward, the algorithm can identify network applications by this model. Even encryption connection can be identified with high accuracy because the algorithm monitor packet in statistical way instead of trying to decode it.
+\item To control flows with confidence, an application identification algorithm might be in consideration. The first thing comes out must be Intrusion Detection System (IDS) or Intrusion Prevention System (IPS) but there are 2 major weakness of this two kind of technic. The first is it spends a lot of time to identify connections, and network speed may hang on IPS. The other is it may can’t figure out encryption connections because not all of IDS or IPS have key matching feature. Most of modern cloud applications use HTTPS protocol as basic communication method which makes matter even worse. This study gives an algorithm to identify applications with statistical method with machine learning. The algorithm only use connection ``attributes'' to train an identification models such as packet direction, packet length. Afterward, the algorithm can identify network applications by this model. Even encryption connection can be identified with high accuracy because the algorithm monitor packet in statistical way instead of trying to decode it.
 \item To analysis performance of this vCPE framework, this study integrate all of functions mention above to evaluate it compare with the single-table mechanism.
 \end{enumerate}
 
@@ -206,9 +206,9 @@ The network functions of vCPE services are the firewall service, NAT, DHCP, forw
 
 
 \subsection{Service Control}
-Service control is used to enable or disable services. To enable a service, the table-miss rule should be modified. A packet-in rule is always placed in the flow table of the last active service as a table miss in case there is no corresponding rule. To enable the service chain, the rules of each service except the last service contain an additional action, “go to next flow table,” which enables the packets to continue to pass through all active services.
+Service control is used to enable or disable services. To enable a service, the table-miss rule should be modified. A packet-in rule is always placed in the flow table of the last active service as a table miss in case there is no corresponding rule. To enable the service chain, the rules of each service except the last service contain an additional action, ``go to next flow table'', which enables the packets to continue to pass through all active services.
 
-To disable a service, we must not only modify the table-miss rule but also add an enforce rule. Each enforce rule has maximum priority with the action “go to next flow table.” It indicates that packets still pass through the disabled service’s table, but ignore other rules and proceed to the next flow table.
+To disable a service, we must not only modify the table-miss rule but also add an enforce rule. Each enforce rule has maximum priority with the action, ``go to next flow table''. It indicates that packets still pass through the disabled service’s table, but ignore other rules and proceed to the next flow table.
 
 
 
@@ -381,9 +381,9 @@ Ground truth of a flow can be defined based on server (owner of server, category
 
 
 \subsection{Method to Obtain Ground Truth of Flow in Supervised ML}
-We install our software on various devices establishing the flows. We call the software Scanner. Scanner has different versions for different operating systems (OSs). For desktop applications on Windows, trainer acts as scanner. It uses Windows API and local port of the flow to obtain the ground truth of the flow. As for Mac OS X, scanner calls the UNIX command “lsof” and parses the result to obtain lists of 5-tuples, process IDs (PIDs), and application names. Then scanner uses the PID and “ps” to obtain corresponding complete application names. As for native mobile applications on iOS, scanner uses a method similar to that used on OS X. However, we have to install package of UNIX command and jailbreak the iPhones before scanner runs.  As for native mobile applications on Android, scanner calls “cat /proc/net/tcp,” “cat /proc/net/tcp6,” and “cat /proc/net/udp,” and parses the results to obtain mappings of 5-tuples and UIDs. Next, the Android API and UIDs are used to obtain corresponding application names as ground truth. Finally, mappings of 5-tuples and application names are obtained. For iOS and Android, scanner has to run in background.
+We install our software on various devices establishing the flows. We call the software Scanner. Scanner has different versions for different operating systems (OSs). For desktop applications on Windows, trainer acts as scanner. It uses Windows API and local port of the flow to obtain the ground truth of the flow. As for Mac OS X, scanner calls the UNIX command ``lsof'' and parses the result to obtain lists of 5-tuples, process IDs (PIDs), and application names. Then scanner uses the PID and ``ps'' to obtain corresponding complete application names. As for native mobile applications on iOS, scanner uses a method similar to that used on OS X. However, we have to install package of UNIX command and jailbreak the iPhones before scanner runs.  As for native mobile applications on Android, scanner calls ``cat /proc/net/tcp'', ``cat /proc/net/tcp6'', and ``cat /proc/net/udp'', and parses the results to obtain mappings of 5-tuples and UIDs. Next, the Android API and UIDs are used to obtain corresponding application names as ground truth. Finally, mappings of 5-tuples and application names are obtained. For iOS and Android, scanner has to run in background.
 
-As for web-based applications, we implemented a browser in Java. We let it run in Windows. It has two main modules. One browses websites to generate traffic. It browses only one website at a time. The other module obtains the PID of the browser module, shortens the domain name of the currently browsed website to act as the application name, and receives requests from Scanner. When scanner in Windows detects an active flow, it uses the Windows API to check what process established the flow. It obtains the process name and the PID of the process. When it encounters a process name that is “java.exe” or “javaw.exe,” it sends the PID to the browser. If the PID is the browser’s PID, the browser sends the application name to Scanner to act as the ground truth of that flow.
+As for web-based applications, we implemented a browser in Java. We let it run in Windows. It has two main modules. One browses websites to generate traffic. It browses only one website at a time. The other module obtains the PID of the browser module, shortens the domain name of the currently browsed website to act as the application name, and receives requests from Scanner. When scanner in Windows detects an active flow, it uses the Windows API to check what process established the flow. It obtains the process name and the PID of the process. When it encounters a process name that is ``java.exe'' or ``javaw.exe'', it sends the PID to the browser. If the PID is the browser’s PID, the browser sends the application name to Scanner to act as the ground truth of that flow.
 
 \subsection{Flow Attributes Adopted in Supervised ML}
 In ML, when the system calculates flow attributes, we use only the transport layer information of packets with a payload. Moreover, we use the application round (APPR) proposed in \cite{classfication-cloud} to analyze the flow behavior. We use the number of packets, packet size, transmission time, transmission direction, throughput, and APPR to define flow attributes, such as total number of packets transmitted by the client, size of data transmitted by the server in Round N, and the average transmission time of each packet in Round N.A total of 69 attributes are defined, as reported in our previous study \cite{Chia-Chin-master}.
