--- a/netsoft_paper.tex
+++ b/netsoft_paper.tex
@@ -381,7 +381,7 @@ Ground truth of a flow can be defined based on server (owner of server, category
 
 
 \subsection{Method to Obtain Ground Truth of Flow in Supervised ML}
-We install our software on various devices establishing the flows. We call the software Scanner. Scanner has different implementation versions for different operating systems (OSs). For desktop applications on Windows, trainer acts as scanner. It uses Windows API and local port of the flow to obtain the ground truth of the flow. As for Mac OS X, scanner calls the UNIX command ``lsof'' and parses the result to obtain lists of 5-tuples, process IDs (PIDs), and application names. Then scanner uses the PID and ``ps'' to obtain corresponding complete application names. As for native mobile applications on iOS, scanner uses a method similar to that used on OS X. However, we have to install package of UNIX command and jailbreak the iPhones before scanner runs.  As for native mobile applications on Android, scanner calls ``cat /proc/net/tcp'', ``cat /proc/net/tcp6'', and ``cat /proc/net/udp'', and parses the results to obtain mappings of 5-tuples and UIDs. Next, the Android API and UIDs are used to obtain corresponding application names as ground truth. Finally, mappings of 5-tuples and application names are obtained. For iOS and Android, scanner has to run in background.
+We install our software on various devices establishing the flows. We call the software scanner. Scanner has different implementation versions for different operating systems (OSs). For desktop applications on Windows, trainer acts as scanner. It uses Windows API and local port of the flow to obtain the ground truth of the flow. As for Mac OS X, scanner calls the UNIX command ``lsof'' and parses the result to obtain lists of 5-tuples, process IDs (PIDs), and application names. Then scanner uses the PID and ``ps'' to obtain corresponding complete application names. As for native mobile applications on iOS, scanner uses a method similar to that used on OS X. However, we have to install package of UNIX command and jailbreak the iPhones before scanner runs.  As for native mobile applications on Android, scanner calls ``cat /proc/net/tcp'', ``cat /proc/net/tcp6'', and ``cat /proc/net/udp'', and parses the results to obtain mappings of 5-tuples and UIDs. Next, the Android API and UIDs are used to obtain corresponding application names as ground truth. Finally, mappings of 5-tuples and application names are obtained. For iOS and Android, scanner has to run in background.
 
 As for web-based applications, we implemented a browser in Java. We let it run in Windows. It has two main modules. One browses websites to generate traffic. It browses only one website at a time. The other module obtains the PID of the browser module, shortens the domain name of the currently browsed website to act as the application name, and receives requests from Scanner. When scanner in Windows detects an active flow, it uses the Windows API to check what process established the flow. It obtains the process name and the PID of the process. When it encounters a process name that is ``java.exe'' or ``javaw.exe'', it sends the PID to the browser. If the PID is the browser’s PID, the browser sends the application name to Scanner to act as the ground truth of that flow.
 
